# libcodeapi

./: .gitignore  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  rabbmq.py
alembic/: env.py
alembic/versions/: 09407ad39f12_modification_for_messaging_and_updates.py  fc8a4d1929cd_init_migrations.py
backend/: crud.py  exceptions.py  internal_messaging.py  main.py  models.py  requirements.txt  schemas.py  storage.py
exceptions/: exceptions.py
frontend/: __init__.py  crud.py  exceptions.py  internal_message.py  main.py  models.py  requirements.txt  schemas.py  storage.py
frontend/messages/: rabbit_processes.py
tests/: conftest.u
tests/backend/: test_api_backend.py  test_models_backend.py
tests/frontend/: conftest.py  test_api.py  test_models.py
